--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<nav>
 			<ul class="container">
-				<li><a href="http://inovation.ho.ua/ARindex.html">Робота №2</a>
+				<li><a href="ARindex.html">Робота №2</a>
 				
 				</li>
 			</ul>
